--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:h2:file:~/coding_practices/coding_practice_4/song/src/main/playlist
+spring.sql.init.mode= always
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
